--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,8 @@
   "description": "",
   "version": "0.0.0",
   "browser_action": {
-    "default_popup": "options.html"
+    "default_popup": "popup.html"
   },
-  "options_page": "options.html",
   "content_scripts": [
     {
       "matches": ["https://github.com/robots.txt*"],
